// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button aria-label="Aria label" data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</section>"
`;

exports[`Switch > renders with class correctly 1`] = `
"<div data-slot="root" class="inline-flex">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with color neutral correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" value="on"><span data-state="checked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with defaultValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" value="on"><span data-state="checked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with description correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <p data-slot="description" class="">Description</p>
  </div>
</div>"
`;

exports[`Switch > renders with description slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Description slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Switch > renders with disabled correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" data-disabled="" disabled="" value="on"><span data-state="unchecked" data-disabled="" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with id correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="id" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with label correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Switch > renders with label slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label slot</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Switch > renders with modelValue correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" value="on"><span data-state="checked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with name correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with pohon correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with required correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="true" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <div data-slot="wrapper" class=""><label for="v-0" data-slot="label" class="">Label</label>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Switch > renders with size lg correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with size md correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with size sm correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with size xl correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with size xs correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with trueValue/falseValue as number correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" value="on"><span data-state="checked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with trueValue/falseValue as string correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="true" aria-required="false" data-state="checked" value="on"><span data-state="checked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with trueValue/falseValue unchecked correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="on"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Switch > renders with value correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="container" class=""><button data-slot="base" id="v-0" role="switch" type="button" aria-checked="false" aria-required="false" data-state="unchecked" value="value"><span data-state="unchecked" data-slot="thumb" class=""></span>
      <!--v-if-->
    </button></div>
  <!--v-if-->
</div>"
`;
